@@ -1,5 +1,6 @@
 package com.example.bookshelf.Service;
 
+import com.example.bookshelf.Components.RandomIndexGenerator;
 import com.example.bookshelf.Model.Book;
 import com.example.bookshelf.Model.BooksWrapper;
 import com.example.bookshelf.Utility.BookUtility;
@@ -15,11 +16,21 @@ import java.util.List;
 @Service
 public class BookService {
 
-    @Value("${api_key}")
-    private String apikey;
-    @Value("${baseUrl}")
-    private String baseUrl;
+    private final String apikey;
+    private final String baseUrl;
     private final RestClient restClient;
+    private final RandomIndexGenerator indexGenerator;
+
+    public BookService(
+            @Value("${books.api_key}") String apikey,
+            @Value("${books.api_base_url}") String baseUrl,
+            RestClient restClient,
+            RandomIndexGenerator indexGenerator) {
+        this.apikey = apikey;
+        this.baseUrl = baseUrl;
+        this.restClient = restClient;
+        this.indexGenerator = indexGenerator;
+    }
 
     /**
      * Retrieve value entered into top navigation bar, and make an api call with it
@@ -32,47 +43,57 @@ public class BookService {
         URI uri = UriComponentsBuilder
                 .fromUriString(baseUrl)
                 .queryParam("q", userQuery)
+                .queryParam("key", apikey)
                 .encode()
                 .build().toUri();
 
-        BooksWrapper booksWrapper = restClient.get()
+        BooksWrapper wrapper = restClient.get()
                 .uri(uri)
                 .retrieve()
                 .body(BooksWrapper.class);
 
-        if (booksWrapper != null) {
-            BookUtility.changeListOfUrls(Collections.singletonList(booksWrapper));
+        if (wrapper == null || wrapper.getBookItems() == null || wrapper.getBookItems().isEmpty()) {
+            return List.of();
         }
-        return booksWrapper != null ? booksWrapper.getBookItems() : List.of();
-    }
 
-
-    public BookService(RestClient client) {
-        this.restClient = client;
+        BookUtility.changeListOfUrls(Collections.singletonList(wrapper));
+        return wrapper.getBookItems();
     }
     // TODO Add enum with categories to the database, to allow randomness
 
     /**
      * Generate random number that is between 1 and 100. By doing that, api can generate random books each time the main page will be visited.
-     * Make an api call, that will return random books. Parameter 'q' will fetch any book that contains letter 'a in it.
+     * Make an api call, that will return random books. Parameter 'q' will fetch any book that contains letter 'a' in it.
      * After the call is done, change the link with BookUtility class to change the link to the thumbnail, to avoid blurry book covers
      * If wrapper is not null, then return list with books, otherwise, return empty list
      */
 
     public List<Book> getRandomBooks() {
-        int random = (int) (Math.random() * 100) + 1;
+        int random = indexGenerator.generateStartIndex(1, 30);
+
+        URI uri = UriComponentsBuilder
+                .fromUriString(baseUrl)
+                .queryParam("q", 'a') // hardcoded param value, just to get random books
+                .queryParam("startIndex", random)
+                .queryParam("key", apikey)
+                .encode()
+                .build().toUri();
+
         BooksWrapper wrapper = restClient.get()
-                .uri("/books/v1/volumes?q=a&startIndex="
-                        + random + "&maxResult=40&key=" + apikey)
+                .uri(uri)
                 .retrieve()
                 .body(BooksWrapper.class);
 
-        if (wrapper != null) {
-            BookUtility.changeListOfUrls(Collections.singletonList(wrapper));
+
+        if (wrapper == null || wrapper.getBookItems() == null || wrapper.getBookItems().isEmpty()) {
+            return List.of();
         }
 
-        return wrapper != null ? wrapper.getBookItems() : List.of();
+        BookUtility.changeListOfUrls(Collections.singletonList(wrapper));
+
+        return wrapper.getBookItems();
     }
+
 
     /**
      * Whenever user will click on any book, this method will be triggered.
@@ -82,15 +103,24 @@ public class BookService {
      */
 
     public Book getBookDetails(String id) {
+
+        URI uri = UriComponentsBuilder
+                .fromUriString(baseUrl)
+                .path("/{id}")
+                .queryParam("key", apikey)
+                .encode()
+                .buildAndExpand(id).toUri();
+
         Book book = restClient.get()
-                .uri("/books/v1/volumes/{bookId}", id)
+                .uri(uri)
                 .retrieve()
                 .body(Book.class);
 
-        if (book != null) {
-            BookUtility.changeObjectUrl(book);
+        if (book == null || book.getVolumeInfo() == null) {
+            return new Book();
         }
+        BookUtility.changeObjectUrl(book);
 
-        return book != null ? book : new Book();
+        return book;
     }
 }
